RESOLVED FIXED219135
Worklet.addModule() should reject promise with an AbortError when the network load fails
https://bugs.webkit.org/show_bug.cgi?id=219135
Summary Worklet.addModule() should reject promise with an AbortError when the network...
Chris Dumez
Reported 2020-11-18 16:50:44 PST
Worklet.addModule() should reject promise with an AbortError when the network load fails: - https://html.spec.whatwg.org/multipage/worklets.html#dom-worklet-addmodule
Attachments
Patch (9.96 KB, patch)
2020-11-18 16:53 PST, Chris Dumez
no flags
Patch (13.50 KB, patch)
2020-11-19 08:49 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-11-18 16:53:52 PST
Chris Dumez
Comment 2 2020-11-19 08:49:16 PST
Geoffrey Garen
Comment 3 2020-11-19 09:11:33 PST
Comment on attachment 414587 [details] Patch r=me
Chris Dumez
Comment 4 2020-11-19 09:24:10 PST
Comment on attachment 414587 [details] Patch Clearing flags on attachment: 414587 Committed r270033: <https://trac.webkit.org/changeset/270033>
Chris Dumez
Comment 5 2020-11-19 09:24:12 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2020-11-19 09:25:17 PST
Note You need to log in before you can comment on or make changes to this bug.