Worklet.addModule() should reject promise with an AbortError when the network load fails https://bugs.webkit.org/show_bug.cgi?id=219135

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing (or keep failing with slighly different
output).

* web-platform-tests/worklets/audio-worklet-credentials.https-expected.txt:
* web-platform-tests/worklets/audio-worklet-import.https-expected.txt:

Source/WebCore:

Worklet.addModule() should reject promise with an AbortError when the network load fails:
- https://html.spec.whatwg.org/multipage/worklets.html#dom-worklet-addmodule

This also aligns our behavior with Blink.

No new tests, rebaselined existing tests.

* worklets/WorkletGlobalScope.cpp:
(WebCore::WorkletGlobalScope::notifyFinished):

LayoutTests:

Update existing tests to reflect behavior change.

* http/wpt/webaudio/audioworklet-addModule-cors.sub.https.html:
* webaudio/audioworklet-addModule-failure-expected.txt:
* webaudio/audioworklet-addModule-failure.html:

Canonical link: https://commits.webkit.org/231774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270033 268f45cc-cd09-0410-ab3c-d52691b4dbfc